Fix contrast error

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -86,7 +86,7 @@ fieldset {
     margin-top: 20px;
 }
 .photographe-location {
-    color: #d3573c;
+    color: #901c1c;
     font-weight: bold;
 }
 .contact_button {
