--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:visited {
     font-size: 0.7rem;
 }
 .photographer_section .photographe-location {
-    color: #d3573c;
+    color: #901c1c;
 }
 .photographer_section .photographe-tagline {
     font-weight: bold;
